--- a/packages/moviehub-app-react/src/App.css
+++ b/packages/moviehub-app-react/src/App.css
@@ -1,22 +1,14 @@
-.App {
-  text-align: center;
+@import url("https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css");
+
+header {
+    text-align: center;
+    margin: 1em auto;
 }
 
-.App-logo {
-  height: 40vmin;
+.movie-title {
+    font-size: 16px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
+.logo {
+    width: 60px;
 }
